tests/baselines/reference/undeclaredMethod.errors.txt
undeclaredMethod.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
undeclaredMethod.ts(10,3): error TS2339: Property 'saltbar' does not exist on type 'C'.


==== undeclaredMethod.ts (2 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class C {
            public salt() {}
        }
    }
    
    var c:M.C = new M.C();
    
    c.salt();	// cool
    c.saltbar();	// crash
      ~~~~~~~
!!! error TS2339: Property 'saltbar' does not exist on type 'C'.
    
    